# ethserv

./: .env.example  .gitignore  Cargo.toml
pers/: wallet_5e884898da28047151d0e56f8dc62927.sqlite
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: constants.rs
src/pubsub/: mod.rs
src/wallet/: database.rs  ethserv.rs  mnemonic.rs  mod.rs  paths.rs
src/wallet/usdt/: contract.rs
tests/: contract.rs
