[package]
name = "ethserv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
alloy = { version = "0.9.2", features = ["full", "signer-mnemonic"] }
chacha20poly1305 = "0.10.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17"
sha2 = "0.10"
hex = "0.4"
axum = { version = "0.7", features = ["json"] }
zmq = "0.10"
rusqlite = { version = "0.30", features = ["bundled"] }
env_logger = "0.10.0"
log = "0.4"
futures-util = "0.3"
futures = "0.3"
dotenv = "0.15"
config = { version = "0.13", features = ["toml"] }
lazy_static = "1.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros", "sync"] }
once_cell = "1.19"